src/main/java/com/example/devcrew/global/error/ErrorResponse.java
package com.example.devcrew.global.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;
import org.springframework.http.HttpStatus;

@Getter
@RequiredArgsConstructor
public class ErrorResponse {
    private final int status;
    private final String errorMessage;

    public static ErrorResponse create(final ErrorCode errorCode) {
        return new ErrorResponse(
                errorCode.getStatus(),
                errorCode.getErrorMessage()
        );
    }
}
